feat: add status endpoint
